Refactored AnnotationMerger.py for readability and format changes
Because:
- Code needed cleaning
- Format changed in annotations briefly
- Logs needed cleaning

Changed config slightly. Refactored large methods into smaller methods. Made logs allow for easier debugging.

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,5 +15,5 @@ vepArguments:
   - --sift s
   - --hgvs
   - --variant_class
-  - --canonical
+  - --no-stats #Turned off stats
   - --pick --pick_order biotype,canonical,appris,tsl,ccds,rank,length,mane
