Refactor Annotater.py and AnnotationMerger.py to classes.
* Update config.yaml to have correct --no_stats
* Remove singularity exec statement because it is not a valid command.

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -15,5 +15,5 @@ vepArguments:
   - --sift s
   - --hgvs
   - --variant_class
-  - --no-stats #Turned off stats
+  - --no_stats #Turned off stats
   - --pick --pick_order biotype,canonical,appris,tsl,ccds,rank,length,mane # PDX Finder personal preference order
